--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/favicon_normal.png">
 </head>
 <body>
     
@@ -38,7 +38,7 @@
         <div class="container">
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> 
+            <a class="navbar-brand logo-image" href="index.html"><img src="images/BH_logo_blanco.png" alt="alternative"></a> 
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text" href="index.html">Desi</a> -->
@@ -65,7 +65,7 @@
                             <li><div class="dropdown-divider"></div></li>
                             <li><a class="dropdown-item" href="terms.html">Términos y condiciones</a></li>
                             <li><div class="dropdown-divider"></div></li>
-                            <li><a class="dropdown-item active" href="privacy.html">Política de privacidad</a></li>
+                            <li><a class="dropdown-item" href="privacy.html">Política de privacidad</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -347,7 +347,6 @@
 
     <!-- Testimonials -->
     <div class="slider-1">
-        <img class="text-decoration img-fluid" src="images/testimonials-decoration.png" alt="alternative">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
