--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contacto</a>
+                        <a class="nav-link" href="index.html#contact">Contacto</a>
                     </li>
                 </ul>
                 <span class="nav-item social-icons">
