--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="author" content="Richy">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-	<meta property="og:site_name" content="" /> <!-- website name -->
+	<meta property="og:site_name" content="Business House" /> <!-- website name -->
 	<meta property="og:site" content="" /> <!-- website link -->
-	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
+	<meta property="og:title" content="Business House | Inicio"/> <!-- title shown in the actual shared post -->
+	<meta property="og:description" content="En Business House somos una agencia de marketing inmobiliario que ofrece servicios integrales para que puedas comprar o vender propiedades de manera eficaz" /> <!-- description shown in the actual shared post -->
+	<meta property="og:image" content="images/BH_logo_normal.jpg" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
@@ -61,15 +61,18 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Drop</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                            <li><a class="dropdown-item" href="article.html">Articulo</a></li>
+                            <li><a class="dropdown-item" href="articulo.html">Artículo</a></li>
                             <li><div class="dropdown-divider"></div></li>
-                            <li><a class="dropdown-item" href="terms.html">Términos y condiciones</a></li>
+                            <li><a class="dropdown-item" href="terminos.html">Términos y condiciones</a></li>
                             <li><div class="dropdown-divider"></div></li>
-                            <li><a class="dropdown-item" href="privacy.html">Política de privacidad</a></li>
+                            <li><a class="dropdown-item" href="privacidad.html">Política de privacidad</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotros">Nosotros</a>
                     </li>
                 </ul>
                 <span class="nav-item social-icons">
@@ -215,7 +218,7 @@
                     <div class="text-container">
                         <h2>Edición de fotos</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum labore alias repellendus dolores sed ut cumque, deserunt tempora quasi nemo amet.</p>
-                        <a class="read-more no-line green" href="article.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a>
+                        <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -237,7 +240,7 @@
                     <div class="text-container">
                         <h2>Edición de material audiovisual</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia architecto minus deserunt consequatur cupiditate quis facere optio quam rerum fugiat.</p>
-                        <a class="read-more no-line green" href="article.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a>
+                        <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -259,7 +262,7 @@
                     <div class="text-container">
                         <h2>Diseño de Ads</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi quos, incidunt ex eum eveniet voluptatem inventore repudiandae, obcaecati nostrum modi nisi placeat nihil impedit nulla aliquid ipsum.</p>
-                        <a class="read-more no-line green" href="article.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a>
+                        <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -288,55 +291,55 @@
                     </div> <!-- end of button group -->
                     <div class="grid">
                         <div class="element-item departamento">
-                            <a href="article.html">
+                            <a href="articulo.html">
                                 <img class="img-fluid" src="images/project-1.jpg" alt="alternative">
                                 <p><strong>Depa 1</strong> - Lorem ipsum dolor sit.</p>
                             </a>
                         </div>
                         <div class="element-item departamento">
-                            <a href="article.html">
+                            <a href="articulo.html">
                                 <img class="img-fluid" src="images/project-2.jpg" alt="alternative">
                                 <p><strong>Depa 2</strong> - Lorem ipsum dolor sit amet consectetur.</p>
                             </a>
                         </div>
                         <div class="element-item departamento">
-                            <a href="article.html">
+                            <a href="articulo.html">
                                 <img class="img-fluid" src="images/project-3.jpg" alt="alternative">
                                 <p><strong>Depa 3</strong> - Lorem ipsum dolor sit amet consectetur adipisicing elit. Est!</p>
                             </a>
                         </div>
                         <div class="element-item casa">
-                            <a href="article.html">
+                            <a href="articulo.html">
                                 <img class="img-fluid" src="images/project-4.jpg" alt="alternative">
                                 <p><strong>Casa 1</strong> - Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </a>
                         </div>
                         <div class="element-item casa">
-                            <a href="article.html">
+                            <a href="articulo.html">
                                 <img class="img-fluid" src="images/project-5.jpg" alt="alternative">
                                 <p><strong>Casa 2</strong> - Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore quibusdam vel iure.</p>
                             </a>
                         </div>
                         <div class="element-item casa">
-                            <a href="article.html">
+                            <a href="articulo.html">
                                 <img class="img-fluid" src="images/project-6.jpg" alt="alternative">
                                 <p><strong>Casa 3</strong> - Lorem ipsum dolor sit.</p>
                             </a>
                         </div>
                         <div class="element-item oficina">
-                            <a href="article.html">
+                            <a href="articulo.html">
                                 <img class="img-fluid" src="images/project-7.jpg" alt="alternative">
                                 <p><strong>Oficina 1</strong> - Lorem ipsum dolor sit amet consectetur.</p>
                             </a>
                         </div>
                         <div class="element-item oficina">
-                            <a href="article.html">
+                            <a href="articulo.html">
                                 <img class="img-fluid" src="images/project-8.jpg" alt="alternative">
                                 <p><strong>Oficina 2</strong> - Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                             </a>
                         </div>
                         <div class="element-item oficina">
-                            <a href="article.html">
+                            <a href="articulo.html">
                                 <img class="img-fluid" src="images/project-9.jpg" alt="alternative">
                                 <p><strong>Oficina 3</strong> - Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                             </a>
@@ -452,15 +455,15 @@
                 <div class="col-lg-10 offset-lg-1">
                     
                     <!-- Contact Form -->
-                    <form>
+                    <form id="contactForm" action="https://formspree.io/f/mzbynpwy" method="POST">
                         <div class="form-group">
-                            <input type="text" class="form-control-input" placeholder="Nombre" required>
+                            <input type="text" name="Nombre" class="form-control-input" placeholder="Nombre" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control-input" placeholder="Correo" required>
+                            <input type="email" name="Email" class="form-control-input" placeholder="Correo" required>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control-textarea" placeholder="Mensaje" required></textarea>
+                            <textarea name="Mensaje" class="form-control-textarea" placeholder="Mensaje" required></textarea>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="form-control-submit-button">Enviar</button>
@@ -468,7 +471,7 @@
                     </form>
                     <!-- end of contact form -->
 
-                    <p class="p-heading">La información que nos proporcionas nos ayuda a darte una mejor atención</p>
+                    <p class="p-small text-light">La información proporcionada nos ayuda a darte una mejor atención</p>
 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -489,8 +492,8 @@
                     <div class="footer-col second">
                         <h6>Enlaces</h6>
                         <ul class="list-unstyled li-space-lg p-small">
-                            <li><a href="terms.html">Términos y condiciones</a></li>
-                            <li><a href="privacy.html">Política de privacidad</a></li>
+                            <li><a href="terminos.html">Términos y condiciones</a></li>
+                            <li><a href="privacidad.html">Política de privacidad</a></li>
                         </ul>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col third text-center">
@@ -512,7 +515,6 @@
                                 <i class="fab fa-linkedin fa-stack-1x"></i>
                             </a>
                         </span>
-                        <p class="p-small">We would love to hear from you <a href="mailto:contact@site.com"><strong>contact@site.com</strong></a></p>
                     </div> <!-- end of footer-col -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
