--- a/terminos.html
+++ b/terminos.html
@@ -59,8 +59,10 @@
                         <a class="nav-link" href="index.html#projects">Propiedades</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Drop</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                            <li><a class="dropdown-item" href="nosotros.html">¿Quiénes somos?</a></li>
+                            <li><div class="dropdown-divider"></div></li>
                             <li><a class="dropdown-item" href="articulo.html">Artículo</a></li>
                             <li><div class="dropdown-divider"></div></li>
                             <li><a class="dropdown-item" href="terminos.html">Términos y condiciones</a></li>
@@ -69,27 +71,24 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Contacto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="nosotros">Nosotros</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
                 <span class="nav-item social-icons">
                     <span class="fa-stack">
-                        <a href="https://www.facebook.com/BusinessHouseMkt">
+                        <a target="_blank" href="https://www.facebook.com/BusinessHouseMkt">
                             <i class="fas fa-circle fa-stack-2x"></i>
                             <i class="fab fa-facebook-f fa-stack-1x"></i>
                         </a>
                     </span>
                     <span class="fa-stack">
-                        <a href="https://www.instagram.com/businesshousem/">
+                        <a target="_blank" href="https://www.instagram.com/businesshousem/">
                             <i class="fas fa-circle fa-stack-2x"></i>
                             <i class="fab fa-instagram fa-stack-1x"></i>
                         </a>
                     </span>
                     <span class="fa-stack">
-                        <a href="https://www.linkedin.com/company/business-house-mkt">
+                        <a target="_blank" href="https://www.linkedin.com/company/business-house-mkt">
                             <i class="fas fa-circle fa-stack-2x"></i>
                             <i class="fab fa-linkedin fa-stack-1x"></i>
                         </a>
