Cambio texto e imágenes, y aviso de cookies
Cambio de imágenes en home y nosotros Texto en Home Aviso de cookies Menú adaptable centrado Reducción tamaño logo móvil

--- a/articulo.html
+++ b/articulo.html
@@ -127,7 +127,7 @@
 
 
     <!-- Basic -->
-    <div class="ex-basic-1 pt-4">
+    <section class="ex-basic-1 pt-4">
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
@@ -140,12 +140,12 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of ex-basic-1 -->
+    </section> <!-- end of ex-basic-1 -->
     <!-- end of basic -->
 
 
     <!-- Cards -->
-    <div class="ex-cards-1 pt-3 pb-3">
+    <section class="ex-cards-1 pt-3 pb-3">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -204,12 +204,12 @@
                 </div> <!-- end of col -->   
             </div> <!-- end of row -->   
         </div> <!-- end of container -->   
-    </div> <!-- end of ex-cards-1 -->
+    </section> <!-- end of ex-cards-1 -->
     <!-- end of cards -->
 
 
     <!-- Basic -->
-    <div class="ex-basic-1 pt-3 pb-5">
+    <section class="ex-basic-1 pt-3 pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
@@ -251,12 +251,12 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of ex-basic-1 -->
+    </section> <!-- end of ex-basic-1 -->
     <!-- end of basic -->
 
 
     <!-- Footer -->
-    <div class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -294,7 +294,7 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of footer -->  
+    </footer> <!-- end of footer -->  
     <!-- end of footer -->
 
 
@@ -303,7 +303,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © <a href="#your-link">Business House</a></p>
+                    <p class="p-small">© 2021 Business House</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
