--- a/contacto.html
+++ b/contacto.html
@@ -109,7 +109,7 @@
 
 
     <!-- Contact phrase -->
-    <div class="contact-phrase">
+    <section class="contact-phrase">
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
@@ -117,19 +117,19 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of ex-basic-1 -->
+    </section> <!-- end of ex-basic-1 -->
     <!-- end of basic -->
 
     
     <!-- Contact -->
-    <div id="contact" class="form-2">
+    <main id="contact" class="form-2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="h2-heading">Contáctanos</h2>
                     <p class="p-heading">¡Nos encantaría poder ayudarte!</p>
                     <ul class="list-unstyled li-space-lg">
-                        <li><i class="fas fa-map-marker-alt"></i> &nbsp;Av. Sor Juana Inés de la Cruz 254, Tlalnepantla, Edo Méx, CP.550000</li>
+                        <li><i class="fas fa-map-marker-alt"></i> &nbsp;Av. Sor Juana Inés de la Cruz 344, Tlalnepantla, Edo Méx, CP.550000</li>
                         <li><i class="fas fa-phone"></i> &nbsp;<a href="tel:00817202212">+52 12 34 56 78</a></li>
                         <li><i class="fas fa-envelope"></i> &nbsp;<a href="mailto:contact@site.com">correo@ejemplo.com</a></li>
                     </ul>
@@ -163,12 +163,12 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of form-1 -->
+    </main> <!-- end of form-1 -->
     <!-- end of contact -->
 
 
     <!-- Social Media -->
-    <div class="ex-basic-1 pt-4">
+    <section class="ex-basic-1 pt-4">
         <div class="container media-container">
             <div class="row">
                 <h3>Siguenos en nuestras redes</h3>
@@ -187,12 +187,12 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of ex-basic-1 -->
+    </section> <!-- end of ex-basic-1 -->
     <!-- end of basic -->
 
 
     <!-- Footer -->
-    <div class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -230,7 +230,7 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of footer -->  
+    </footer> <!-- end of footer -->  
     <!-- end of footer -->
 
 
@@ -239,7 +239,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © <a href="#your-link">Business House</a></p>
+                    <p class="p-small">© 2021 Business House</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
