--- a/nosotros.html
+++ b/nosotros.html
@@ -116,7 +116,7 @@
 
 
     <!-- Who are we? -->
-	<div class="split">
+	<main class="split">
 		<div class="area-1">
 		</div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2 bg-gray">
             <div class="container">    
@@ -134,14 +134,14 @@
                 </div> <!-- end of row -->
             </div> <!-- end of container -->
 		</div> <!-- end of area-2 -->
-    </div> <!-- end of split -->
+    </main> <!-- end of split -->
     <!-- end of details -->
 
 
 
 
     <!-- Misión -->
-    <div id="services" class="basic-1">
+    <section id="services" class="basic-1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7">
@@ -157,12 +157,12 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of basic-1 -->
+    </section> <!-- end of basic-1 -->
     <!-- end of services 1 -->
 
 
     <!-- Visión -->
-    <div class="basic-2">
+    <section class="basic-2">
         <div class="container">
             <div class="row vision">
                 <div class="col-lg-7">
@@ -178,17 +178,17 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of basic-2 -->
+    </section> <!-- end of basic-2 -->
     <!-- end of services 2 -->
     
 
 
     <!-- Introduction -->
-    <div id="introduction" class="cards-1 bg-gray">
+    <section id="introduction" class="cards-1 bg-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="h2-heading">¿Por qué nosotros?</h2>
+                    <h2 class="h2-heading">Nuestros valores</h2>
                     <p class="p-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde placeat eius quidem! Sequi quam, voluptatum nulla omnis libero neque illo ut nisi, vero delectus unde.</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -213,8 +213,32 @@
                             <span class="fas fa-video"></span>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title">Dedicación</h4>
+                            <h4 class="card-title">Honestidad</h4>
                             <div class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis cumque, asperiores hic in minus, non, optio nobis eligendi officia sequi soluta provident praesentium!</div>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-icon">
+                            <span class="fas fa-paint-brush"></span>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Respeto</h4>
+                            <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores iste rem deleniti a, suscipit eos quod!</div>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-icon">
+                            <span class="fas fa-paint-brush"></span>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Trabajo en equipo</h4>
+                            <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores iste rem deleniti a, suscipit eos quod!</div>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -234,13 +258,13 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of cards-1 -->
+    </section> <!-- end of cards-1 -->
     <!-- end of introduction -->
 
 
 
         <!-- Experience -->
-        <div class="ex-header">
+        <section class="ex-header">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-10 offset-xl-1 text-center">
@@ -257,18 +281,18 @@
                     </div>
                 </div> <!-- end of row -->
             </div> <!-- end of container -->
-        </div> <!-- end of ex-header -->
+        </section> <!-- end of ex-header -->
         <!-- end of header --> 
 
     <!-- Contact -->
-    <div id="contact" class="form-1">
+    <section id="contact" class="form-1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="h2-heading">Contáctanos</h2>
                     <p class="p-heading">¡Nos encantaría poder ayudarte!</p>
                     <ul class="list-unstyled li-space-lg">
-                        <li><i class="fas fa-map-marker-alt"></i> &nbsp;Av. Sor Juana Inés de la Cruz #254, Tlalnepantla, Edo Méx, CP.550000</li>
+                        <li><i class="fas fa-map-marker-alt"></i> &nbsp;Av. Sor Juana Inés de la Cruz 344, Tlalnepantla, Edo Méx, CP.550000</li>
                         <li><i class="fas fa-phone"></i> &nbsp;<a href="tel:00817202212">+52 12 34 56 78</a></li>
                         <li><i class="fas fa-envelope"></i> &nbsp;<a href="mailto:contact@site.com">correo@ejemplo.com</a></li>
                     </ul>
@@ -299,13 +323,13 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of form-1 -->
+    </section> <!-- end of form-1 -->
     <!-- end of contact -->
 
 
 
     <!-- Footer -->
-    <div class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -343,7 +367,7 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of footer -->  
+    </footer> <!-- end of footer -->  
     <!-- end of footer -->
 
 
@@ -352,7 +376,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © <a href="#your-link">Business House</a></p>
+                    <p class="p-small">© 2021 Business House</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
