--- a/privacidad.html
+++ b/privacidad.html
@@ -114,7 +114,7 @@
 
 
     <!-- Basic -->
-    <div class="ex-basic-1 pt-5 pb-5">
+    <main class="ex-basic-1 pt-5 pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
@@ -214,7 +214,7 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of ex-basic-1 -->
+    </main> <!-- end of ex-basic-1 -->
     <!-- end of basic -->
 
 
@@ -266,7 +266,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © <a href="#your-link">Business House</a></p>
+                    <p class="p-small">© 2021 Business House</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
