--- a/privacidad.html
+++ b/privacidad.html
@@ -56,9 +56,9 @@
                         <a class="nav-link" href="index.html#services">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#projects">Propiedades</a>
+                        <a class="nav-link" href="propiedades.html">Propiedades</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown01">
                             <li><a class="dropdown-item" href="nosotros.html">¿Quiénes somos?</a></li>
@@ -69,16 +69,25 @@
                             <li><div class="dropdown-divider"></div></li>
                             <li><a class="dropdown-item" href="privacidad.html">Política de privacidad</a></li>
                         </ul>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotros.html">¿Quiénes somos?</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <span class="nav-item social-icons">
+                <div class="nav-item social-icons">
                     <span class="fa-stack">
                         <a target="_blank" href="https://www.facebook.com/BusinessHouseMkt">
                             <i class="fas fa-circle fa-stack-2x"></i>
                             <i class="fab fa-facebook-f fa-stack-1x"></i>
+                        </a>
+                    </span>
+                    <span class="fa-stack">
+                        <a target="_blank" href="https://wa.link/bcbqn2">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-whatsapp fa-stack-1x"></i>
                         </a>
                     </span>
                     <span class="fa-stack">
@@ -93,7 +102,7 @@
                             <i class="fab fa-linkedin fa-stack-1x"></i>
                         </a>
                     </span>
-                </span>
+                </div>
             </div> <!-- end of navbar-collapse -->
         </div> <!-- end of container -->
     </nav> <!-- end of navbar -->
@@ -219,7 +228,7 @@
 
 
     <!-- Footer -->
-    <div class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -236,19 +245,25 @@
                     </div> <!-- end of footer-col -->
                     <div class="footer-col third text-center">
                         <span class="fa-stack">
-                            <a href="https://www.facebook.com/BusinessHouseMkt">
+                            <a target="_blank" href="https://www.facebook.com/BusinessHouseMkt">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="https://www.instagram.com/businesshousem/">
+                            <a target="_blank" href="https://wa.link/bcbqn2">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-whatsapp fa-stack-1x"></i>
+                            </a>
+                        </span>
+                        <span class="fa-stack">
+                            <a target="_blank" href="https://www.instagram.com/businesshousem/">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-instagram fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="https://www.linkedin.com/company/business-house-mkt">
+                            <a target="_blank" href="https://www.linkedin.com/company/business-house-mkt">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-linkedin fa-stack-1x"></i>
                             </a>
@@ -257,7 +272,7 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of footer -->  
+    </footer> <!-- end of footer -->  
     <!-- end of footer -->
 
 
